<resources>
    <string name="app_name">Dream Friend</string>
    <string name="find_your_match">Find your\nPerfect match\nToday.</string>
    <string name="log_in_with_phone_number">Login with Phone Number</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="terms_and_policy">By signing up, you agree with our <u>Terms and conditions.</u> Learn how we process your data in our <u>Privacy Policy.</u></string>
    <string name="whats_your_number">What’s your phone\nnumber?</string>
    <string name="verify_scr_phone_number">Phone number</string>
    <string name="verify_scr_email_address">Email Address</string>
    <string name="add_you_mobile_number">Add your mobile number. We’ll send you a\nverification code to verify your mobile number.</string>
    <string name="add_you_email_address">Add your email address. We’ll send you a\nverification code to verify your email address.</string>
    <string name="send_otp">Send OTP</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_retake_my_photo">Retake My Photo</string>
    <string name="oops_try_again">Oops...try again!</string>
    <string name="oops_try_again_desc">Sorry, we can’t verify you with that photo. Try again, and make sure:\n\n . You copy the pose exactly\n . Your face is clearly visible\n . Your photo matches your profile pics</string>
    <string name="btn_logout">Logout</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="clear_all">Clear All</string>
    <string name="verify_your_phone">Verify your Phone\nnumber</string>
    <string name="verify_your_email_address">Verify your Email\nAddress</string>
    <string name="verify_des">Enter the 4 digit code that we send\nto</string>
    <string name="didnt_receive_anything">Didn’t Receive Anything?  </string>
    <string name="resend_code">Resend</string>
    <string name="first_name">First Name</string>
    <string name="tv_Signup">Signup</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="gender">Gender</string>
    <string name="verify_my_profile">Verify my profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="about_me">About me</string>
    <string name="incognito_mode">Incognito Mode</string>
    <string name="verified_by_photo">Verified by photo</string>
    <string name="filter_verified_photo_only">Verified profiles only</string>
    <string name="see_other_people">See other people if i run out</string>
    <string name="hide_and_report">Block and Report</string>
    <string name="my_basic">More info</string>
    <string name="hint_first_name">Enter your name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_email_address">Enter your email address</string>
    <string name="hint_dob">dd/mm/yyy</string>
    <string name="hint_about">Write something about yourself…</string>
    <string name="opt_man">Man</string>
    <string name="opt_woman">Woman</string>
    <string name="opt_other">Other</string>
    <string name="error_gender">Please select gender</string>
    <string name="error_firstName">Full Name is mandatory</string>
    <string name="error_Email">Email is mandatory</string>
    <string name="error_Email_invalid">Please enter a valid email</string>
    <string name="error_dob">Date of Birth is mandatory</string>
    <string name="bottom_dob">Age can’t be changed later</string>
    <string name="error_checkbox">Please check this box if you want to proceed.</string>
    <string name="bottom_300_char">300 Characters</string>
    <string name="agree_privacy_policy">I agree with Privacy policy and Term &amp; Conditions.</string>
    <string name="create_your_account">Create your account</string>
    <string name="tv_tell_us_about_you">Tell us about you.</string>
    <string name="tell_potential">Tell potential matches more about yourself.\nYou can edit these later.</string>
    <string name="height">Height</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="looking_for">Looking For</string>
    <string name="sexual_orientation">Sexual Orientation</string>
    <string name="education">Education</string>
    <string name="religion">Religion</string>
    <string name="workout">Workout</string>
    <string name="smoking">Smoking</string>
    <string name="drinking">Drinking</string>
    <string name="interests">Interests</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_loc_manually">Set Location Manually</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_loc_Automatically">Allow Location</string>
    <string name="btn_set_location">Set Location</string>
    <string name="btn_take_photo">Take My Photo</string>
    <string name="btn_yes_block">Yes, Block</string>
    <string name="btn_go_home">Go Home</string>
    <string name="btn_no_return_to_profile">No, Return to Profile</string>
    <string name="btn_apply_filters">Apply Filters</string>
    <string name="block_this_person_desc">When you hide someone, you won\'t see this person again and they won\'t see your profile - unless they\'ve already seen your profile while swiping.</string>
    <string name="btn_upgrade_advance_filter">Upgrade for advance filters</string>
    <string name="btn_change_filters">Change Filters</string>
    <string name="btn_more_like_now">Get More Likes Now</string>
    <string name="chip_men">Men</string>
    <string name="chip_women">Women</string>
    <string name="chip_everyone">Everyone</string>
    <string name="chip_everyday">Everyday</string>
    <string name="chip_often">Often</string>
    <string name="chip_sometimes">Sometimes</string>
    <string name="chip_socially">Socially</string>
    <string name="chip_never">Never</string>
    <string name="chip_regularly">Regularly</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="sure_skip">Sure you want to skip?</string>
    <string name="sure_skip_desc">Skipping means you won’t be able to receive likes &amp; message.</string>
    <string name="yes_want_to_skip">Yes, I Want to Skip</string>
    <string name="complete_now">Complete Now</string>
    <string name="upload_photo">Upload photo</string>
    <string name="add_photos">Add photos</string>
    <string name="add_best_photos">Add Your best photos</string>
    <string name="account_settings">Account Settings</string>
    <string name="add_photos_desc">Add your recent pics Upload 2 photos to start. Add 4 or more to make your profile stand out.</string>
    <string name="add_best_photos_desc">The first photo in your album must be a picture of you.</string>
    <string name="photo_guideline">Get photo tips and guidelines̵</string>
    <string name="incognito_desc">Enable incognito mode so no one sees you unless you want them to. Only people you swipe right on will be able to view your profile.</string>
    <string name="photo_guidelines">Photo guidelines</string>
    <string name="basic_filters">Filters</string>
    <string name="block">Block</string>
    <string name="fake_profile">Fake Profile</string>
    <string name="im_just_not_interested">I\'m just not interested</string>
    <string name="inappropriate_content">Inappropriate content</string>
    <string name="scam_or_commercial">Scam or commercial</string>
    <string name="identity_based_hate">Identity-based hate</string>
    <string name="underage">Underage</string>
    <string name="block_and_report_this_person">Block and report this person</string>
    <string name="block_and_report_this_person_desc">Don\'t worry, your feedback is anonymous and they won\'t know that you\'ve blocked or reported them.</string>
    <string name="filter_interested_In">Interested in</string>
    <string name="plan_no_commitment">No Commitment, Cancel Anytime.</string>
    <string name="plan_already_subscribed">Already Subscribed? Tap Here to </string>
    <string name="plan_terms_service_privacy_policy">Term of services | Privacy Policy</string>
    <string name="plan_plus_title">Dream Friend Plus</string>
    <string name="plan_premium_title">Dream Friend Premium</string>
    <string name="filter_age_range">Age range</string>
    <string name="filter_distance">Distance (km)</string>
    <string name="advance_filters">Advance Filters</string>
    <string name="block_and_report">Block and Report</string>
    <string name="filter_have_they_verified_themselves">Have they verified themselves?</string>
    <string name="whats_this">What’s this?</string>
    <string name="photo_guideline_desc">Post great photos like this\nYou’ll get higher exposure and more likes</string>
    <string name="photo_guideline_desc2">NOT photos like this\nYou’ll get lower exposure or banned from Swipe</string>
    <string name="nav_encounters">Encounters</string>
    <string name="nav_likes">Likes</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_profile">Profile</string>
    <string name="see_more_filter">Want to see more\npeople?</string>
    <string name="hoping_for_more">Hoping for more likes?</string>
    <string name="keep_swiping">Keep Swiping</string>
    <string name="see_more_desc_filter">You’ve seen all the people nearby,\nChange your filters to see more people.</string>
    <string name="people_that_like_desc">People that Like you will appear here If you want to boost your chances, try our premium features!</string>
    <string name="set_your_location_services">Set your location\nservices</string>
    <string name="set_your_location_permission">We will use your location for following features:-\n\n1. Find Nearby Matches: Discover potential partners closer to your current location, making dating more convenient and increasing the likelihood of meaningful connections.\n\n2. Personalized Recommendations: Receive real-time suggestions for nearby date spots, restaurants, and activities, simplifying date planning and making it more enjoyable.</string>
    <string name="happy_to_submit">Happy to submit your photo?</string>
    <string name="happy_to_submit_desc">For verification to be successful:\n\n. Your face must be clearly visible\n . You must be copying the pose exactly</string>
    <string name="copy_pose">Copy this pose and take a photo.</string>
    <string name="copy_pose_desc">We’ll verify you by comparing  it with other photos already on your dream friend profile.</string>
    <string name="copy_pose_support">This photo won’t be uploaded to your profile. It’ll only be used to verify you and help keep you safe.\nContact Support</string>
    <string name="whats_your_location">What\'s your location?</string>
    <string name="your_current_location">Your Current Location</string>
    <string name="location_desc">You’ll  need to enable your location in order to\nuse dream friend.</string>
    <string name="sure_want_to_continue">Are you sure you want to continue?</string>
    <string name="yahoo_successfully_verified">Yahoo! You have successfully verified your email address.</string>
    <string name="manual_location_desc">Tell us where you are to see people in your area.</string>
    <string name="photo_verification">Verification</string>
    <string name="premium_title">Dream Friend Premium</string>
    <string name="premium_price">Upgrade from 199.99 INR</string>
    <string name="premium_desc">Unlock all possibilities and enjoy a better dating experience like never before.</string>
    <string name="plus_title">Dream Friend Plus</string>
    <string name="plus_price">Upgrade from 99.99 INR</string>
    <string name="plus_desc">Get more chances to match and boost your profile with extra benefits.</string>
</resources>