<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutCreateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_backbtn_layout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans_semi_bold"
                android:text="@string/tv_Signup"
                android:textColor="@color/color_161616"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/create_your_account"
                android:textColor="@color/color_949494"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/first_name"
                android:textColor="@color/color_161616"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/new_border_949494_1_5_cr10"
                    android:hint="@string/hint_first_name"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    android:singleLine="true"
                    android:textColor="@color/color_161616"
                    android:textColorHint="@color/color_949494"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/etNameTrailing"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_wrong"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/etName"
                    app:layout_constraintEnd_toEndOf="@+id/etName"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etNameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/error_firstName"
                android:textColor="@color/color_ED1C1D"
                android:textSize="12sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/email"
                android:textColor="@color/color_161616"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_161616"
                    android:singleLine="true"
                    android:textColorHint="@color/color_949494"
                    android:background="@drawable/new_border_949494_1_5_cr10"
                    android:hint="@string/hint_email"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="15dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/etEmailTrailing"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_wrong"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                    app:layout_constraintEnd_toEndOf="@+id/etEmail"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/etEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/error_Email"
                android:textColor="@color/color_ED1C1D"
                android:textSize="12sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/gender"
                android:textColor="@color/color_161616"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/genderRadio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gender_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/opt_man"
                    android:textColor="@color/radio_btn_text_color_selection"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdWomen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/gender_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/opt_woman"
                    android:textColor="@color/radio_btn_text_color_selection"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/rdOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gender_selector"
                    android:button="@android:color/transparent"
                    android:checked="false"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/opt_other"
                    android:textColor="@color/radio_btn_text_color_selection"
                    android:textSize="16sp" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/errorGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/error_gender"
                android:textColor="@color/color_ED1C1D"
                android:textSize="12sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/dob"
                android:textColor="@color/color_161616"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDob"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_border_949494_1_5_cr10"
                android:drawableEnd="@drawable/drawable_calendar_c82848d"
                android:fontFamily="@font/merriweather_sans_regular"
                android:hint="@string/hint_dob"
                android:imeOptions="actionNext"
                android:padding="12dp"
                android:textColor="@color/color_161616"
                android:textColorHint="@color/color_949494"
                android:textSize="16sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/errorDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merriweather_sans_regular"
                    android:text="@string/error_dob"
                    android:textColor="@color/color_ED1C1D"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merriweather_sans_regular"
                    android:gravity="end"
                    android:text="@string/bottom_dob"
                    android:textColor="@color/color_949494"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/about_me"
                android:textColor="@color/color_161616"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_border_949494_1_5_cr10"
                android:gravity="start"
                android:hint="@string/hint_about"
                android:minLines="4"
                android:maxLength="300"
                android:textColor="@color/color_161616"
                android:textColorHint="@color/color_949494"
                android:paddingHorizontal="10dp"
                android:paddingVertical="15dp"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/merriweather_sans_regular"
                    android:gravity="end"
                    android:text="@string/bottom_300_char"
                    android:textColor="@color/color_949494"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/iAgreeCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="0dp"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/chText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/merriweather_sans_regular"
                    android:gravity="start"
                    android:text="@string/agree_privacy_policy"
                    android:textColor="@color/color_949494"
                    android:textSize="12sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/errorCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/merriweather_sans_regular"
                android:text="@string/error_checkbox"
                android:textColor="@color/color_ED1C1D"
                android:textSize="12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_common_padding_horizontal"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="44dp"
            android:backgroundTint="@color/btn_enable_disable"
            android:fontFamily="@font/merriweather_sans_semi_bold"
            android:gravity="center|center_vertical"
            android:paddingVertical="10dp"
            android:text="@string/btn_submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>