<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_marginTop="44dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_img_skip"/>
        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure_skip"
            android:textColor="@color/color_161616"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:fontFamily="@font/merriweather_sans_semi_bold"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure_skip_desc"
            android:textColor="@color/color_949494"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merriweather_sans_regular"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCompleteNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginHorizontal="22dp"
            android:backgroundTint="@color/color_161616"
            android:fontFamily="@font/merriweather_sans_semi_bold"
            android:gravity="center|center_vertical"
            android:paddingVertical="15dp"
            android:text="@string/complete_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp" />
        <TextView
            android:id="@+id/tvSkipNow"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content"
            android:text="@string/yes_want_to_skip"
            android:textColor="@color/color_161616"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/merriweather_sans_regular"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
