<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:textSize="26sp"
            android:fontFamily="@font/merriweather_sans_semi_bold"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="@dimen/_common_padding_horizontal"
            android:text="Block Name?"
            android:gravity="center"
            android:textColor="@color/color_161616"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/merriweather_sans_regular"
            app:lineHeight="24sp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_common_padding_horizontal"
            android:text="@string/sure_want_to_continue"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/color_949494" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/color_161616"
            android:fontFamily="@font/merriweather_sans_semi_bold"
            android:gravity="center|center_vertical"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="@dimen/_common_padding_horizontal"
            android:text="@string/btn_yes_block"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnReturnToProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/color_161616"
            android:fontFamily="@font/merriweather_sans_medium"
            android:gravity="center|center_vertical"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="@dimen/_common_padding_horizontal"
            android:text="@string/btn_no_return_to_profile"
            android:textAllCaps="false"
            android:textColor="@color/color_161616"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
